# frame

./: .gitignore  ARCHITECTURE.md  README.md  README_COMPLETE.md  run.sh  run_demo.sh  setup-complete.sh  setup.sh  test_demo.sh
backend/: .env.example  .gitignore  API_KEY_VERIFICATION.md  Cargo.toml  Cargo.toml.test  DEPLOYMENT.md  Dockerfile  build_fix.sh  create_simple.sh  deploy.sh  docker-compose.yml  force_attachment_resync.sh  nginx.conf  openapi.yaml  rebuild_conversations.sh  reprocess_attachments.sql  run.sh  test_api_key.sh  test_api_key_runtime.sh  test_caldav_sync.sh  test_env.sh  test_key_loading.rs  test_runtime.sh  test_server.sh  verify_api_key.sh
backend/.sqlx/: query-234dd20e3a775196e58afdd9292a3195099d9b4d57a790c95c662cc5a46702d1.json  query-4baf4f7a5145a405ae08ac4f43c4d30205dfd1371fbc7ddc4bdecfe8b1561b06.json  query-a6086907881127c3a249f3e3d7b2a92d63ceafd4a1e7c4ea572775d3f7a959d7.json  query-e842b5ce262db560e0ece0fe1434ba95ef06e4199a7e86e30c5de314861a43a1.json  query-ecd095dd7472390b807e51ac75dc840b7d4722e31b9cd95093837a45aaf70ee4.json
backend/examples/: test_bcrypt.rs
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_additional_tables.sql  20240103000000_fts5_and_fixes.sql  20240104000000_attachment_gallery.sql  20240105000000_new_features.sql  20240106000000_oauth_support.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  main_backup.rs  main_original.rs  websocket.rs  websocket_impl.rs
backend/src/handlers/: agent.rs  attachments.rs  auth.rs  automations.rs  calendar.rs  (+13 more)
backend/tests/: integration_test.rs
(+85 files in other folders)
